# VideoEditor

./: CMakeLists.txt  manage.sh  vs.rsyslog.conf
src/: FFMUtils.cc  FFMUtils.h  FFMVideo.cc  FFMVideo.h  constants.h  main.cc  main.h
src/ffmpeg/: FFMVideo.cc  FFMVideo.h
src/ffmpeg/detail/: FFMVideoImpl.cc  FFMVideoImpl.h
src/gstreamer/: GSVideo.cc  GSVideo.h
src/gstreamer/detail/: GSVideoImpl.cc  GSVideoImpl.h
src/interfaces/: ivideo.h  video.h
src/utils/: FFMUtils.cc  FFMUtils.h  macros.h
src/vsg/: VideoEditor.cc  VideoEditor.h
tests/: CMakeLists.txt
tests/src/: main.cc
